--- a/test.html
+++ b/test.html
@@ -1,14 +1,108 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Biodata</title>
 </head>
+
 <body>
-    <div class="center">
-    <h1>12</h1>
-</div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" style="color: rgb(255, 0, 0)" href="#">Blog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="my gf.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-primary" href="test.html">Biodata</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-primary" href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+    <center class="text-center">
+        <h1>Biodata</h1>
+    </center>
+    <div class="text-primary pt-5 container-fluid">
+        <div class="row mb-2">
+            <div class="col-md-12">
+                <div class="row g-0 overflow-hidden mb-4">
+                    <div class="col-6 p-4 d-flex flex-column" style="margin-left: 265px;">
+                        <table border="0">
+                            <tbody>
+                                <tr>
+                                    <td width="20%">Nama</td>
+                                    <td width="2%">:</td>
+                                    <td>Muhammad,Albern,Pratama</td>
+                                </tr>
+                                <tr>
+                                    <td width="20%">Tempat,tanggal,lahir</td>
+                                    <td width="2%">:</td>
+                                    <td>Bandung.15,mei,2010</td>
+                                </tr>
+                                <tr>
+                                    <td width="20%">Hobby</td>
+                                    <td width="2%">:</td>
+                                    <td>Travelling</td>
+                                </tr>
+                                <tr>
+                                    <td width="20%">Jenis kelamin</td>
+                                    <td width="2%">:</td>
+                                    <td>Laki-Laki</td>
+                                </tr>
+                                <tr>
+                                    <td width="20%">Agama</td>
+                                    <td width="2%">:</td>
+                                    <td>Islam</td>
+                                </tr>
+                                <tr>
+                                    <td width="20%">Alamat</td>
+                                    <td width="2%">:</td>
+                                    <td>Komp.permata biru blok ad baru no 95a</td>
+                                </tr>
+                                <tr>
+                                    <td width="20%">Email</td>
+                                    <td width="2%">:</td>
+                                    <td>Albernpratama150510@gmail.com</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div><img src="css/Gojo-Satoru.jpg" alt="Error!!!" width="200px" style="margin-left: -200px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
