--- a/Biodataofmyself.html
+++ b/Biodataofmyself.html
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="my gf.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link active text-primary" aria-current="page" href="Biodataofmyself.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-primary" href="test.html">Biodata</a>
+          <a class="nav-link text-primary" href="Biodata.html">Biodata</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-primary" href="contact.html">Contact</a>
