--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top " style="background-color: #f7f9f8;">
         <div class="container-fluid">
-          <a class="navbar-brand text-dark" href="#">Blog</a>
+            <a class="navbar-brand" style="color: rgb(255, 0, 0)" href="#">Blog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link active text-primary" aria-current="page" href="my gf.html">Home</a>
+                <a class="nav-link active text-primary" aria-current="page" href="Biodataofmyself.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-primary" href="test.html">Biodata</a>
+                <a class="nav-link active text-primary" href="Biodata.html">Biodata</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active text-primary" href="Contact.html">Contact</a>
